# UBTECH-IL-LAB

./: .gitattributes  .gitignore  .gitmodules
ubt_IL/: .dockerignore  CLAUDE.md  README.md
ubt_IL/dataset/sim_pick_place/meta/: info.json  stats.json  tasks.parquet
ubt_IL/docker/: Dockerfile  entrypoint.sh  env.sh  fastdds_no_shm.xml  ros2_deploy_bridge.py  run.sh
ubt_IL/scripts/convert/: convert.sh  convert_grasp_bottle.sh  convert_to_lerobot.py
ubt_IL/scripts/convert/configs/: Tien_Kung_26_1RGB.json
ubt_IL/scripts/deploy/: reset.py  rollout.sh
ubt_IL/tienkung/: CLAUDE.md  init_tienkung.py
ubt_IL/tienkung/lerobot_robot_tienkung/: pyproject.toml
ubt_IL/tienkung/lerobot_robot_tienkung/lerobot_robot_tienkung/: __init__.py  config_tienkung.py  tienkung.py
ubt_IL/tienkung/lerobot_robot_tienkung/lerobot_robot_tienkung/camera/: __init__.py  camera_image_server.py  config_image_server.py  zmq_image_receiver.py
ubt_sim/: CLAUDE.md  README.md
ubt_sim/docker/: README.md
ubt_sim/docker/isaac_sim/: Dockerfile  env.sh  fastdds_no_shm.xml  run.sh
ubt_sim/docker/ros2/: Dockerfile  env.sh  run.sh
ubt_sim/scripts/: sim_runner.py  start_sim.sh
ubt_sim/source/ubt_sim/: __init__.py
ubt_sim/source/ubt_sim/devices/: __init__.py  action_process.py
ubt_sim/teleoperation/bridges/: CMakeLists.txt  build_cpp_bridge.sh  ros2_zmq_bridge.py  zmq_image_bridge  zmq_image_bridge.cpp
ubt_sim/teleoperation/control/: pick_place.py  pick_place_save_data.py  reset.py  robot_controller.py  save_data.sh
ubt_sim/teleoperation/tools/: test_ros_image.py  test_zmq_image.py
(+8 files in other folders)
